Inserted list pages

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="title_activity_my_list_view">MyListView</string>
     <string name="title_activity_my_menu1">MyMenu1</string>
     <string name="title_fragment_standard_list">Semesterpacks</string>
-    
+    <string name="title_fragment_all_list">Alle Skripte</string>
 
 </resources>
